# flask-mongo-api-study

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
notebook/: api.ipynb
src/: fastapi_server.py  server.py  task_sample.py  worker.py  worker_sample.py
src/api/: app.py  health.py  ticket.py
src/api/middleware/: sandbox_middleware.py
src/configs/: development.yml
src/domain/service/: __init__.py  health.py  health_service.py  pubsub_publisher_service.py  ticket.py  ticket_service.py
src/domain/service/model/: ticket.py
src/initializers/: configuration.py  configurator.py  mongo.py
